Fix the content resizing
Had to sacrifice the horizontal scrolling bar for the code blocks

--- a/source/sass/components/_markdown.scss
+++ b/source/sass/components/_markdown.scss
@@ -54,8 +54,7 @@
         padding: 1.25rem 1.5rem;
         background-color: rgba(0,0,0, 0.4);
         border-radius: 5px;
-
-        overflow-x: auto;
+        white-space: pre-wrap;
     }
     
 
